# CUDA-HandsOn

./: .gitignore  README.md
add/: kernel_hello.cu  vector_add.cpp  vector_add_kernels.cu
common/include/: cuda_utils.h  timer.h
gemini/: vector_add.cu
gemini/softmax/: .gitignore  CMakeLists.txt  softmax.cu
gemini/softmax/benchmarks/: main.cpp
gemini/softmax/include/: softmax.h
gemini/softmax/src/: dispatch.cpp  softmax_naive.cu  softmax_warp.cu
gemm/: CMakeLists.txt  README.md  main.cu  sgemm_kernel.cu
gemm/benchmarks/: bench_gemm.cu
gemm/include/: gemm.h
gemm/src/: gemm_api.cpp
gemm/src/kernels/: dispatch.cpp  gemm_cublas.cu  gemm_naive.cu  gemm_register.cu  gemm_shared.cu  kernels.h
gemm/tests/: test_gemm.cu
kernels/add/: CMakeLists.txt  README.md
kernels/add/include/: add.h
kernels/add/src/: add_multi_block.cu  add_naive.cu  add_single_block.cu  dispatch.cpp
kernels/add/tests/: test_add.cu
kernels/gemm/: CMakeLists.txt  README.md
kernels/gemm/include/: gemm.h
kernels/gemm/profile_results/20260517_225719/: merged_metrics.csv
kernels/gemm/scripts/: profile.sh
kernels/gemm/src/: dispatch.cpp  dispatch.h  gemm_api.cpp  gemm_async.cu  gemm_cutlass.cu  gemm_double_buffered.cu  gemm_naive.cu  gemm_register.cu  gemm_shared.cu  gemm_tensor_core.cu  gemm_ultimate.cu  gemm_vectorized.cu  gemm_zhihu.cu  kernels.h
kernels/gemm/tests/: bench_gemm.cu  test_gemm.cu
kernels/softmax/: CMakeLists.txt  README.md
kernels/softmax/include/: softmax.h
kernels/softmax/profile_results/20260517_181242/: merged_metrics.csv
kernels/softmax/profile_results/20260517_202401/: merged_metrics.csv
kernels/softmax/profile_results/20260517_202503/: merged_metrics.csv
kernels/softmax/scripts/: profile.sh
kernels/softmax/src/: dispatch.cpp  dispatch.h  kernels.h  softmax_api.cpp  softmax_naive.cu  softmax_online.cu  softmax_warp.cu
kernels/softmax/tests/: bench_softmax.cu  test_softmax.cu
softmax/src/: softmax_online.cu
tools/: analyze_gemm.py  analyze_softmax.py  cuda_env_report.txt  gemm_metrics.txt  softmax_metrics.txt  sys_info.py
vector_add/: README.md  run.sh
